fix journey padding

--- a/architecture.html
+++ b/architecture.html
@@ -82,7 +82,7 @@
     <img class="card-img-top" src="image/architecture/river/2.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Auditorium on Mississipi</h4>
-      <p class="card-text" style="color: black">A challenging project sited on a bridge to prompt visitors to engage with music and the environment</p>
+      <p class="card-text" style="color: black">A project on a bridge to prompt visitors to engage with music and the environment</p>
       <p> <small>(Tools: Rhino, Revit, Illustrator, Photoshop, Laser Cutting, Modeling)</small></p>
     </div>
     <div class="card-footer" style="display: none;">
@@ -96,7 +96,7 @@
     <div class="card-body">
       <h4 class="card-title" style="color: black">Greenhouse</h4>
       <p class="card-text" style="color: black">A project that considers water, wind, sunlight conditions for different types of plants</p>
-      <p style="padding-top: 22px"> <small>(Tools: Rhino, Revit, Illustrator, Photoshop, Laser Cutting, Modeling)</small></p>
+      <p> <small>(Tools: Rhino, Revit, Illustrator, Photoshop, Laser Cutting, Modeling)</small></p>
     </div>
     <div class="card-footer" style="display: none;">
       <a href="journey.html" class="card-link">Read more</a>
@@ -110,7 +110,7 @@
     <div class="card-body">
       <h4 class="card-title" style="color: black">Urban Chapel</h4>
       <p class="card-text" style="color: black">A chapel that designed for people to meditate in forest park</p>
-      <p style="padding-top: 22px"> <small>(Tools: Handdrafting, Photography, Photoshop, Laser Cutting, Modeling)</small></p>
+      <p> <small>(Tools: Handdrafting, Photography, Photoshop, Laser Cutting, Modeling)</small></p>
     </div>
     <div class="card-footer" style="display: none;">
       <a href="chapel.html" class="card-link">Read more</a>
