--- a/journey.html
+++ b/journey.html
@@ -107,7 +107,7 @@
 </div>
 
 <div class="jumbotron jumbotron-fluid journey" id="ideation">
-  <div class="container">
+  <div class="containerimg">
     <p class="lead">Design Challenge</p>
     <h1 class="display-5">How might we make a recording and experience sharing platform for travellers?</h1>
   </div>
@@ -245,7 +245,7 @@
 </div>
 
 <div class="jumbotron jumbotron-fluid fuzhougrey">
-  <div class="container">
+  <div class="containerimg">
     <p class="lead">Prototype</p>
     <h1 class="display-5">Designing the experience.</h1>
   </div>
@@ -320,7 +320,7 @@
 </div>
 
 <div class="jumbotron jumbotron-fluid journey" id="insight">
-  <div class="container">
+  <div class="containerimg">
     <h1 class="display-5">Insights and Moving Forward</h1>
   </div>
 </div>
