journey all fix

--- a/journey.html
+++ b/journey.html
@@ -55,8 +55,10 @@
 <div id="journeyIntro">
 
   <div class="jumbotron pageIntroBG">
+    <div class="containerimg" style="padding-top: 90px;">
     <h1 class="display-3">Journey</h1>
     <p>A app designed for travellers to record and share their journey.</p>
+    </div>
   </div>
 
 </div>
@@ -224,7 +226,6 @@
     <div class="container">
       <img src="image/journey/35.jpg" class="img-fluid" alt="Responsive image">
     </div>
-    <hr>
 
 </div>
 
@@ -241,7 +242,6 @@
 <!--     <div class="container">
       <img class="img-fluid" src="image/journey/2.PNG">
     </div> -->
-    <hr>
 </div>
 
 <div class="jumbotron jumbotron-fluid fuzhougrey">
