foodly text fix

--- a/life.html
+++ b/life.html
@@ -102,7 +102,7 @@
 </div>
 
 <div class="jumbotron jumbotron-fluid life" id="ideation">
-  <div class="container">
+  <div class="containerimg">
     <p class="lead">Design Challenge</p>
     <h1 class="display-5">How might we help people eat wisely?</h1>
   </div>
@@ -129,7 +129,7 @@
 </div>
 
 <div class="jumbotron jumbotron-fluid fuzhougrey">
-  <div class="container">
+  <div class="containerimg">
     <p class="lead">Ideation</p>
     <h1 class="display-5">Brainstorm with a persona.</h1>
   </div>
@@ -160,7 +160,7 @@
 
 
 <div class="jumbotron jumbotron-fluid fuzhougrey" id="research">
-  <div class="container">
+  <div class="containerimg">
     <p class="lead">Research</p>
     <h1 class="display-5">Understand existing apps.</h1>
   </div>
@@ -200,7 +200,7 @@
 </div>
 
 <div class="jumbotron jumbotron-fluid fuzhougrey">
-  <div class="container">
+  <div class="containerimg">
     <p class="lead">Prototype</p>
     <h1 class="display-5">Designing the experience.</h1>
   </div>
@@ -277,7 +277,7 @@
 </div>
 
 <div class="jumbotron jumbotron-fluid life" id="insight">
-  <div class="container">
+  <div class="containerimg">
     <p class="lead">Insights and Moving Forward</p>
     <h1 class="display-5">Foodly is only a start.</h1>
   </div>
