foodly image fix

--- a/life.html
+++ b/life.html
@@ -186,7 +186,7 @@
 </div>
 
 
-<img class="img-fluid" src="image/life/38.png" id="prototype">
+<img class="img-fluid" src="image/life/38.png" id="prototype" style="width: 100%">
 
 
 <div class="content">
