--- a/fuzhou.html
+++ b/fuzhou.html
@@ -111,7 +111,7 @@
 </div>
 
 <div class="jumbotron jumbotron-fluid fuzhouwhite" id="myrole">
-  <div class="container">
+  <div class="containerimg">
     <h1 class="display-5">My role</h1>
     <hr>
   </div>
@@ -127,7 +127,7 @@
 </div>
 
 <div class="jumbotron jumbotron-fluid fuzhouwhite" id="research">
-  <div class="container">
+  <div class="containerimg">
     <p class="lead">Research</p>
     <h1 class="display-5">Understand the Development of Fuzhou Dialect.</h1>
     <hr>
@@ -221,7 +221,7 @@
 </div>
 
 <div class="jumbotron jumbotron-fluid fuzhouwhite" id="ui">
-  <div class="container">
+  <div class="containerimg">
     <p class="lead">UI Design</p>
     <h1 class="display-5">Redesign Website</h1>
     <hr>
@@ -308,7 +308,7 @@
 </div>
 
 <div class="jumbotron jumbotron-fluid fuzhouwhite">
-  <div class="container">
+  <div class="containerimg">
     <p class="lead">UI Design</p>
     <h1 class="display-5">Responsive Design</h1>
     <hr>
@@ -337,7 +337,7 @@
 </div>
 
 <div class="jumbotron jumbotron-fluid fuzhouwhite">
-  <div class="container">
+  <div class="containerimg">
     <p class="lead">UI Design</p>
     <h1 class="display-5">Wechat Blogs</h1>
     <hr>
@@ -384,7 +384,7 @@
     </div>
 
 <div class="jumbotron jumbotron-fluid fuzhouwhite" id="insight">
-  <div class="container">
+  <div class="containerimg">
     <h1 class="display-5">Insights and Moving Forward.</h1>
     <hr>
     
@@ -412,7 +412,7 @@
 
 
 <div class="jumbotron jumbotron-fluid fuzhou">
-  <div class="container">
+  <div class="containerimg">
     <p class="lead">Next</p>
     <h1 class="display-5">How might we develop the online dictionary into a multi-functional learning platform?</h1>
   </div>
