--- a/split.html
+++ b/split.html
@@ -160,7 +160,7 @@
 </div>
 
 
-<img class="img-fluid" src="image/split/19.png" id="prototype">
+<img class="img-fluid" src="image/split/19.png" id="prototype" style="width: 100%">
 
 
 <div class="content">
@@ -236,7 +236,7 @@
 </div>
 
 <div class="jumbotron jumbotron-fluid split" id="insight">
-  <div class="container">
+  <div class="containerimg">
     <h1 class="display-5">Insights and Moving Forward</h1>
   </div>
 </div>
