--- a/uber.html
+++ b/uber.html
@@ -171,7 +171,7 @@
 </div>
 
 <div class="jumbotron jumbotron-fluid uber" id="insight"s>
-  <div class="container">
+  <div class="containerimg">
     <h1 class="display-5">Insights and Moving Forward</h1>
   </div>
 </div>
