--- a/about.html
+++ b/about.html
@@ -60,8 +60,8 @@
         <p style="margin-bottom: 40px">I learned architecture at school. I have been working as a graphic designer, a web designer, a museum docent, a videographer, and a UI/UX designer.</p>
         <hr>
 
-        <h5 style="margin-top: 40px;"">Started with architecutre, I learned to think about design critically. </h5>
-        <p style="margin-bottom: 40px">Besides all the technical and visual design skills, an important thing a I learned from architecture is the design thinking process. From developing projects from start to end, I learned how to clarify the goal at the beginning, identify the problems during the process, and how to make decisions to push forward. </p>
+        <h5 style="margin-top: 40px;"">Started with architecture, I learned to think about design critically. </h5>
+        <p style="margin-bottom: 40px">Besides all the technical and visual design skills, an important thing I learned from architecture is the design thinking process. From developing projects from start to end, I learned how to clarify the goal at the beginning, identify the problems during the process, and how to make decisions to push forward. </p>
         <hr>
 
         <h5 style="margin-top: 40px;"">UX as my new passion. </h5>
