--- a/design.html
+++ b/design.html
@@ -84,7 +84,7 @@
     <img class="card-img-top" src="image/journey/2.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Journey</h4>
-      <p class="card-text" style="color: black">A app designed for travellers to record and share their journey.</p>
+      <p class="card-text" style="color: black">An app designed for travellers to record and share their journey.</p>
       <p> <small><i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Most recent work </span>. UX . Prototype . Visual System</small></p>
     </div>
     <div class="card-footer" style="display: none;">
@@ -98,7 +98,7 @@
     <img class="card-img-top" src="image/life/58.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Foodly</h4>
-      <p class="card-text" style="color: black">A app encouraging people to live healthier through eating nutritious food.</p>
+      <p class="card-text" style="color: black">An app encouraging people to live healthier through eating nutritious food.</p>
       <p> <small><i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Most recent work </span>. Research . Interaction . Prototype </small></p>
     </div>
     <div class="card-footer" style="display: none;">
@@ -106,6 +106,28 @@
     </div>
   </div>
   </a>
+
+  <a href="split.html" >
+  <div class="card text-center" >
+    <img class="card-img-top" src="image/split/18.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title" style="color: black">Split</h4>
+      <p class="card-text" style="color: black">A visualized calculator for splitting bills.</p>
+      <p> <small> <i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Design and coding </span>. Research . Design Thinking</small></p>
+    </div>
+    <div class="card-footer" style="display: none;">
+      <a href="journey.html" class="card-link">Read more</a>
+    </div>
+  </div>
+  </a>
+
+  
+
+  
+</div>
+
+
+  <div class="row">
 
   <a href="fuzhou.html" >
   <div class="card text-center">
@@ -121,26 +143,6 @@
   </div>
   </a>
 
-  
-</div>
-
-
-  <div class="row">
-
-
-  <a href="split.html" >
-  <div class="card text-center" >
-    <img class="card-img-top" src="image/split/18.jpg" alt="Card image cap">
-    <div class="card-body">
-      <h4 class="card-title" style="color: black">Split</h4>
-      <p class="card-text" style="color: black">A visualized calculator for spliting bills.</p>
-      <p> <small> <i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Design and coding </span>. Research . Design Thinking</small></p>
-    </div>
-    <div class="card-footer" style="display: none;">
-      <a href="journey.html" class="card-link">Read more</a>
-    </div>
-  </div>
-  </a>
 
   <a href="uber.html" >
   <div class="card text-center" >
