--- a/fuzhou.html
+++ b/fuzhou.html
@@ -78,8 +78,8 @@
     <hr>
 
 
-    <h4><strong>Fuzhou</strong> is a online dictionary designed for the dialect in Fuzhou, China.</h4>
-    <p>I lived in a city called "Fuzhou" and we have a beautiful dialect since 1400 years ago. While less and less people know how to speak it, two of my engineer friends in high school developed a website as an online dictionary for our dialect. <strong>I joined the team in October 2018 to help them redesign the user interface and experience.</strong></p>
+    <h4><strong>Fuzhou</strong> is an online dictionary designed for the dialect in Fuzhou, China.</h4>
+    <p>I lived in a city called "Fuzhou" and we have a beautiful dialect since 1400 years ago. While fewer and fewer people know how to speak it, two of my engineer friends in high school developed a website as an online dictionary for our dialect. <strong>I joined the team in October 2018 to help them redesign the user interface and experience.</strong></p>
 
 
     <img src="image/fuzhou/33.png" class="img-fluid" alt="Responsive image">
@@ -289,7 +289,7 @@
     <hr>
 
     <h4>Redesign proverb page</h4>
-    <p>Clear page for each proverb with explanation, proununciation and example.</p>
+    <p>Clear page for each proverb with the explanation, the proununciation and examples.</p>
     <div class="container">
       <img src="image/fuzhou/39.png" class="img-fluid" alt="Responsive image">
     </div>
@@ -344,7 +344,7 @@
   </div>
 </div>
 <div class="content">
-  <p> Since we target young people and Wechat is a popular social app in China. We started a wechat blog to post articles about Fuzhou Dialect. This is when more people joined our team as writers and editors. We currently have 2000 subscribers. I mostly worked on some improvements for the format and visual design.</p>
+  <p> Since we target young people and Wechat is a popular social app in China. We started a Wechat blog to post articles about Fuzhou Dialect. This is when more people joined our team as writers and editors. We currently have 2000 subscribers. I mostly worked on some improvements to the format and visual design.</p>
 
   <div id="carouselExampleIndicators1" class="carousel slide dark" data-ride="carousel">
   <ol class="carousel-indicators">
@@ -379,7 +379,6 @@
 <div class="container">
     <img src="image/fuzhou/54.jpg" class="img-fluid" alt="Responsive image">
   </div>
-<hr>
 
     </div>
 
@@ -394,7 +393,7 @@
 <div class="content">
 
   <h4>The intersection of design and technology. </h4>
-  <p> I learned that in order for a project to work out well, designers and engineers have to understand and work closely with each other. Design should consider the technical liminations and engineering should match with design as well. 
+  <p> I learned that in order for a project to work out well, designers and engineers have to understand and work closely with each other. Design should consider the technical limitations and engineering should match with design as well. 
   </p>
 </div>
   <hr>
@@ -402,10 +401,10 @@
   <div class="content">
 
   <h4>Never be afraid to start</h4>
-  <p>Everyone in the team are just college students. I was a little hesitated to start at the beginning as there is no one profenssional in our team. While I realize if you want to do something, instead of worring about limits, you should just take the actions to start.</p>
+  <p>Everyone in the team is just college students. I was a little hesitated to start at the beginning as there is no one professional in our team. While I realize if you want to do something, instead of worrying about limits, you should just take the actions to start.</p>
 
   <p>
-    <strong> We started from ideas and thoughts, and we are still on our way to protect the things we treassure in our hometown. </strong>
+    <strong> We started from ideas and thoughts, and we are still on our way to protect the things we treasure in our hometown. </strong>
   </p>
 </div>
 
@@ -423,7 +422,7 @@
 
   <h4>Learning Platform</h4>
     <p>
-      Our next plan is to develop the dicitonary into a systematic learning platform by providing functions such as translation, pronunciation, proverbs and creating a community forum.
+      Our next plan is to develop the dictionary into a systematic learning platform by providing functions such as translation, pronunciation, proverbs and creating a community forum.
     </p>
     <div class="container">
       <img src="image/fuzhou/23.jpg" class="img-fluid" alt="Responsive image">
