--- a/interior.html
+++ b/interior.html
@@ -109,7 +109,7 @@
     <img class="card-img-top" src="image/architecture/view/1.png" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">The View From Here</h4>
-      <p class="card-text" style="color: black">Apartment designed for college students to enjoy both urban life and relieve from nature.</p>
+      <p class="card-text" style="color: black">An apartment designed for college students to enjoy both urban life and relieve from nature.</p>
       <p> <small>(Tools: Rhino, Revit, Illustrator, Photoshop, Laser Cutting, Modeling)</small></p>
     </div>
     <div class="card-footer" style="display: none;">
