--- a/journey.html
+++ b/journey.html
@@ -57,7 +57,7 @@
   <div class="jumbotron pageIntroBG">
     <div class="containerimg" style="padding-top: 90px;">
     <h1 class="display-3">Journey</h1>
-    <p>A app designed for travellers to record and share their journey.</p>
+    <p>An app designed for travellers to record and share their journey.</p>
     </div>
   </div>
 
@@ -111,7 +111,7 @@
 <div class="jumbotron jumbotron-fluid journey" id="ideation">
   <div class="containerimg">
     <p class="lead">Design Challenge</p>
-    <h1 class="display-5">How might we make a recording and experience sharing platform for travellers?</h1>
+    <h1 class="display-5">How might we make a recording and experience sharing platform for travelers?</h1>
   </div>
 </div>
 
@@ -129,7 +129,7 @@
       <div class="col-md-6">
         <p style="margin-left: 5%;"><strong>About recording:</strong></p>
         <ul>
-          <li>How might we make user interface easy for inputs?</li>
+          <li>How might we make the user interface easy for inputs?</li>
           <li>How might we make users feel personal for the recording part?</li>
           <li>What are the necessary elements?</li>
         </ul>
@@ -138,7 +138,7 @@
         <p style="margin-left: 5%;"><strong>About sharing:</strong></p>
         <ul>
           <li>How can this app be designed to be distinguished from other social apps?</li>
-          <li>How might we create smooth user experince?</li>
+          <li>How might we create smooth user experience?</li>
           <li>How might we design diverse ways to introduce new posts to users?</li>
         </ul>
       </div>
@@ -329,14 +329,14 @@
 
 <div class="content" >
 
-  <h4>Travelling is a process of creating memory.</h4>
+  <h4>Traveling is a process of creating the memory.</h4>
   <p>Through interviewing travelers, brainstorming and designing the app, I realize people always have precious memories during their journey, either with their families, friends, or someone they just met. The app acts as a diary, as an album and as a storybook to store those beautiful moments. It also provides a platform for people to share them with others. </p>
 </div>
   <hr>
 <div class="content">
 
   <h4>More to explore. </h4>
-  <p>Travelling is about enjoying the process. For me, designing this app is also a great process for me. <strong>I learned how to develop a concept from the beginning, how to think in a user's perspective and how to use design to reach the goal.</strong> Both travelling and learning never ends, as:
+  <p>Traveling is about enjoying the process. For me, designing this app is also a great process for me. <strong>I learned how to develop a concept from the beginning, how to think in a user's perspective and how to use design to reach the goal.</strong> Both travelling and learning never ends, as:
   </p>
 
   <div class="container" style="margin-top: 50px">
