--- a/split.html
+++ b/split.html
@@ -54,7 +54,7 @@
 
   <div class="jumbotron pageIntroBG">
     <h1 class="display-3">Split</h1>
-    <p>A visualized calculator for spliting bills.</p>
+    <p>A visualized calculator for splitting bills.</p>
   </div>
 
 </div>
@@ -76,10 +76,9 @@
     </p>
 
     <div class="container">
-      <img src="image/split/3.jpg" class="img-fluid" alt="Responsive image">
+      <img src="image/split/30.png" class="img-fluid" alt="Responsive image">
     </div>
 
-    <hr>
 
     <div id="highlight">
     <h4>Content</h4>
@@ -138,7 +137,7 @@
      <hr>
 
     <h4 id="research">Experiments</h4>
-    <p>Continuing the scenario in the storyboard, I proposed a math problem for experiment. <strong>I test with different existing apps to analyze the process for users.</strong></p>
+    <p>Continuing the scenario in the storyboard, I proposed a math problem for experimenting. <strong>I test with different existing apps to analyze the process for users.</strong></p>
     <div class="container">
       <img class="img-fluid" src="image/split/21.png">
     </div>
@@ -211,7 +210,7 @@
     <div class="container gifLarge" id="development">
       <h4>Development</h4>
     <p>
-      After self learning some coding skills, I begin to push from prototyping to developing in HTML, CSS and Javascript.
+      After self-learning some coding skills, I begin to push from prototyping to developing in HTML, CSS and Javascript.
     </p>
       <a href="https://pr.to/92ET9M/" target="_blank" class="link">Proto.io Prototype</a>
       <a syhref="https://nachuan99.github.io/split/" target="_blank" class="link" style="padding-bottom: 40px">Front End Prototype</a>
