--- a/life.html
+++ b/life.html
@@ -54,7 +54,7 @@
 
   <div class="jumbotron pageIntroBG">
     <h1 class="display-3">Foodly</h1>
-    <p>A app encouraging people to live healthier through eating nutritious food.</p>
+    <p>An app encouraging people to live healthier by eating nutritious food.</p>
   </div>
 
 </div>
@@ -186,7 +186,7 @@
 </div>
 
 
-<img class="img-fluid" src="image/life/38.png" id="prototype" style="width: 100%">
+<img class="img-fluid" src="image/life/59.png" id="prototype" style="width: 100%">
 
 
 <div class="content">
@@ -297,7 +297,7 @@
   <h4>More to explore. </h4>
   <p>There are many people who live under the sub-health condition and need health advice. Some health issues can be greatly improved by eating wisely, while there are also much more: exercise, sleep, mental health etc. More products and services should and need to be developed, so people can have the knowledge of how to improve health. Changing behavior day by day can make a large impact on the long term. 
   </p>
-  <p><strong>There are still many improments can be maded to the design. I'll continue to revise, learn and grow.</strong></p>
+  <p><strong>There are still many improvements can be made to the design. I'll continue to revise, learn and grow.</strong></p>
 </div>
   <hr>
 <div class="content">
