--- a/fuzhou.html
+++ b/fuzhou.html
@@ -72,14 +72,11 @@
     <p style="color: #9E9E9E">Tools: Sketch, Illustrator, Proto.io</p>
     <p style="color: #9E9E9E">Teammate: Tianlei Zheng, Yihong Chen</p>
 
-    <p class="intro">
-      The motivation behind this project is <strong>to protect ancient dialects in China.</strong> While more and more people speak Mandarin, a lot of the dialects are disappearing local cultures.
-    </p>
     <hr>
 
 
-    <h4><strong>Fuzhou</strong> is an online dictionary designed for the dialect in Fuzhou, China.</h4>
-    <p>I lived in a city called "Fuzhou" and we have a beautiful dialect since 1400 years ago. While fewer and fewer people know how to speak it, two of my engineer friends in high school developed a website as an online dictionary for our dialect. <strong>I joined the team in October 2018 to help them redesign the user interface and experience.</strong></p>
+    <h4> The motivation behind this project is to protect ancient dialects in China.</h4>
+    <p class="intro">I lived in a city called "Fuzhou" and we have a beautiful dialect since 1400 years ago. While more and more people speak Mandarin, fewer and fewer people know how to speak local dialects. Two of my engineer friends developed a website as an online dictionary for our dialect. Moreover, we also maintain a blog to promote related articles and we are currently developing a mobile app to encourage people without previous knowledge to learn. <strong>As the sole designer on the team, I helped research and design the UI/UX design.</strong></p>
 
 
     <img src="image/fuzhou/33.png" class="img-fluid" alt="Responsive image">
@@ -228,7 +225,7 @@
   </div>
 </div>
 <div class="content">
-  <p>Because we only three students on the team, the new designs need to reuse the existing elements as much as possible to eliminate unnecessary development efforts. </p>
+  <p>Because we have only three students on the team, the new designs need to reuse the existing elements as much as possible to eliminate unnecessary development efforts. </p>
 
 <div id="carouselExampleIndicators" class="carousel slide dark" data-ride="carousel">
   <ol class="carousel-indicators">
