--- a/life.html
+++ b/life.html
@@ -72,7 +72,7 @@
     <p style="color: #9E9E9E">A Personal Project | Tools: Sketch, Illustrator, Proto.io</p>
     
     <p class="intro">
-      As a food lover, I sincerely agree “there is no sincerer love than the love of food.” I think besides loving it, <strong>it is also important to know how to eat wisely.</strong> There are a variety of apps designed for users to keep track of the food. While they provide tables, numbers, and percentages as nutrition feedback, they are not easily understandable. And without further explanation and information of those data, it is difficult for users to relate them to the influence they have on our body and figure out what exactly we should do to improve health.
+      As a food lover, I sincerely agree “there is no sincerer love than the love of food.” I think besides loving it, <strong>it is also important to know how to eat wisely.</strong> There are a variety of apps designed for users to keep track of the food. While they provide tables, numbers, and percentages as nutrition feedback, they are not easily understandable. <strong>I want to design an app that provides further explanation of those nutritional data, so that users can deeply understand their influence on our body and what they should do to improve health.</strong>
     </p>
     <hr>
 
