--- a/split.html
+++ b/split.html
@@ -72,7 +72,7 @@
     <p style="color: #9E9E9E">A Personal Project | Tools: Sketch, Proto.io, html, css, javascript, jQuery</p>
     
     <p class="intro">
-      A calculator acts as a straightforward tool to help people solve math problems. While even with the help of a calculator, splitting bills is sometimes still a complicated process when there are many people and items involved. <strong>How might we design an app to simplify the process of splitting?</strong>
+      A calculator acts as a straightforward tool to help people solve math problems. While even with the help of a calculator, splitting bills is sometimes still a complicated process when there are many people and items involved. With a clear goal in mind, I begin to explore <strong>how might we design an app to simplify the process of splitting?</strong>
     </p>
 
     <div class="container">
