--- a/journey.html
+++ b/journey.html
@@ -137,7 +137,7 @@
       <div class="col-md-6">
         <p style="margin-left: 5%;"><strong>About sharing:</strong></p>
         <ul>
-          <li>How can this app be designed to be distinguished from other social apps?</li>
+          <li>How might we design this app so that it can be differentiated from other social apps?</li>
           <li>How might we create smooth user experience?</li>
           <li>How might we design diverse ways to introduce new posts to users?</li>
         </ul>
