--- a/journey.html
+++ b/journey.html
@@ -76,12 +76,36 @@
     <p style="color: #9E9E9E">A Personal Project | Tools: Sketch, Proto.io, html, css, javascript, jQuery</p>
 
     <p class="intro">
-      “Traveling – it leaves you speechless, then turns you into a storyteller.” During our journey, we all have special memories and stories that we want to tell and share. On one hand, we want to immerse ourselves in the environment and engage with the people we meet; on the other hand, we want to capture those moments and share them with others later. I begin to wonder <strong>how might we create a smooth experience for users to record the journey and share it with other travelers.</strong>
+      “Traveling – it leaves you speechless, then turns you into a storyteller.”  
+    <br><br>
+    Journey is an user-centered app that aims to create a seamless experience for travelers to record, customize and share their trips with others.
+
     </p>
+
+    <div class="container ui">
+      <div class="row">
+        <div class="col-md-3">
+          <img class="img-fluid" src="image/journey/9.png">
+        </div>
+        <div class="col-md-3">
+          <img class="img-fluid" src="image/journey/10.png">
+        </div>
+        <div class="col-md-3">
+          <img class="img-fluid" src="image/journey/11.png">
+        </div>
+        <div class="col-md-3">
+          <img class="img-fluid" src="image/journey/12.png">
+        </div>
+      </div>
+    </div>
+
     <hr>
 
     <div id="highlight">
-    <h4>Content</h4>
+    <div class="container">
+      <img src="image/journey/55.png" class="img-fluid" alt="Responsive image">
+    </div>
+<!--     <h4>Content</h4>
     <ul>
       <li><i class="fas fa-star" style="color: #74b9ff"></i><a href="journey.html#ideation">Ideation</a></li>
       <ul style="padding: 0 0 0 0; margin-left: 30px; color: grey"> 
@@ -103,8 +127,25 @@
             <li>Post your journey</li>
           </ul>
       <li><a href="journey.html#insight">Insight</a></li>
-    </ul>
+    </ul> -->
     </div>
+
+    <h4>User Research</h4>
+    <p>
+      I did primary research including user survey, and individual interviews. The objective was to gain insights of the traveling habits and figure out design opportunities.
+    </p>
+
+    <ul>
+
+      <li>Online Survey <br>
+        I created a 10-question questionnaire and over 50 people answered it. 
+      </li> <br>
+
+      <li>Individual Interview <br>
+        I conducted three semi-structured interviews with participants. We used open-ended questions so that the participants can share their views. 
+      </li> <br>
+
+    </ul>
 
 </div>
 
@@ -119,10 +160,10 @@
 
 
 
-    <h4>Start by asking questions.</h4>
+    <h4>Brainstorming by asking questions.</h4>
 
     <p>
-      The design process starts with the question that <strong>how can I smoothly combine the function of recording and sharing the traveling experience.</strong> For the recording part, I want to make it feel like a personal diary for each traveler. For the sharing platform, I want to make it an active community where people easily find the travelers who share similar interests and learn about their stories.
+      During travelling, on one hand, we want to immerse ourselves in the environment and engage with the people we meet; on the other hand, we want to capture those moments and share them with others later. I begin to wonder <strong>how might we create a smooth experience for users to record the journey and share it with other travelers.</strong> <br> <br>For the recording part, I want to make it feel like a personal diary for each traveler. For the sharing platform, I want to make it an active community where people easily find the travelers who share similar interests and learn about their stories.
     </p>
 
     <div class="row goals" style="margin-top: 50px; margin-bottom: 50px">
@@ -145,13 +186,9 @@
     </div>
     <hr>
       
-    <h4>Mapping</h4>
-    <div class="container">
-      <img class="img-fluid" src="image/journey/5.jpg">
-    </div>
-    <hr>
+    
 
-    <h4 id="research">Research</h4>
+    <h4 id="research">Brainstorming by studying existing apps.</h4>
     <p>
       I conduct research on existing traveling and social apps. Some popular traveling apps focus on locations (restaurants/hotels/sightseeing). People can give ratings, leave comments and use the ranking to help them decide where to visit.While on one hand, as data accumulates, the average rating becomes more and more reliable; on the other hand, it becomes more generalized and less personal: “top 3 things to do in Florence”, “top 10 restaurants you can’t miss”...
     </p>
@@ -189,7 +226,13 @@
     </div>
     <hr>
 
-    <h4 id="persona">Targeting Specific User Groups</h4>
+    <h4>Mapping</h4>
+    <div class="container">
+      <img class="img-fluid" src="image/journey/5.jpg">
+    </div>
+    <hr>
+
+    <h4 id="persona">Persona</h4>
     <p>
       I began exploring the ways in which particular groups of people can use Journey. I envisioned three types of travelers as potential users and created a persona within each context.
     </p>
@@ -291,6 +334,10 @@
     <p>
       An important feature of the app is that by automatically creating a timeline, it acts as a personal notebook for travelers to keep track of the places they visited and the photos they took. From there, you can easily add notes and post your story.
     </p>
+    <div class="container">
+      <img src="image/journey/52.png" class="img-fluid" alt="Responsive image">
+      <img src="image/journey/54.png" class="img-fluid" alt="Responsive image">
+    </div>
     <div class="container gif">
       <img src="image/journey/30.gif" class="img-fluid" alt="Responsive image">
     </div>
