--- a/split.html
+++ b/split.html
@@ -78,9 +78,10 @@
     <div class="container">
       <img src="image/split/30.png" class="img-fluid" alt="Responsive image">
     </div>
+    <hr style="margin-top: 60px">
 
 
-    <div id="highlight">
+<!--     <div id="highlight">
     <h4>Content</h4>
     <ul>
       <li><a href="split.html#ideation">Ideation</a></li>
@@ -97,9 +98,9 @@
       <li><a href="split.html#insight">Insight</a></li>
     </ul>
     <hr style="margin-top: 50px">
-    </div>
+    </div> -->
 
-    <h4 id="ideation">Design Process</h4>
+<!--     <h4 id="ideation">Design Process</h4>
     <p>
       The concept focuses on not only making the app a useful math tool but also visualizing the process in a way that can be easily understood. It is also important to simplify the process to create a smooth user experience.
     </p>
@@ -111,7 +112,7 @@
     <div class="container">
       <img class="img-fluid" src="image/split/5.jpg">
     </div>
-    <hr>
+    <hr> -->
 
     <h4 id="persona">StoryBoard</h4>
     <div class="container">
@@ -147,9 +148,46 @@
     </div>
     <hr>
 
-     <h4>Take Away from Experiments</h4>
+    <h4>User Research</h4>
      <div class="container">
-      <img class="img-fluid" src="image/split/26.png">
+      <div class="row">
+        <div class="col-md-3">
+          <img class="img-fluid" src="image/split/31.png">
+        </div>
+        <div class="col-md-3">
+          <img class="img-fluid" src="image/split/32.png">
+        </div>
+        <div class="col-md-3">
+          <img class="img-fluid" src="image/split/33.png">
+        </div>
+        <div class="col-md-3">
+          <img class="img-fluid" src="image/split/34.png">
+        </div>
+      </div>
+    </div>
+
+     <h4>Highlights for Research Results</h4>
+     <div class="container">
+        <div class="row">
+        <div class="col-md-6">
+          <img class="img-fluid" src="image/split/35.png">
+        </div>
+        <div class="col-md-6">
+          <img class="img-fluid" src="image/split/39.png">
+        </div>
+        </div>
+      </div>
+
+      <h4>Take Away from User Research</h4>
+      <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <img class="img-fluid" src="image/split/26.png">
+        </div>
+        <div class="col-md-6">
+          <img class="img-fluid" src="image/split/40.png">
+        </div>
+        </div>
     </div>
     <hr>
 
