--- a/split.html
+++ b/split.html
@@ -137,19 +137,12 @@
     </div>
      <hr>
 
-    <h4 id="research">Experiments</h4>
-    <p>Continuing the scenario in the storyboard, I proposed a math problem for experimenting. <strong>I test with different existing apps to analyze the process for users.</strong></p>
-    <div class="container">
-      <img class="img-fluid" src="image/split/21.png">
-    </div>
-    <hr>
-    <div class="container">
-      <img class="img-fluid" src="image/split/23.png">
-    </div>
-    <hr>
+    <h4 id="research">User Research</h4>
+    <p>I did primary research including user survey, and experiments with existing apps. The objective was to gain insights of user pain points and figure out potential ways to improve on existing products.</p>
+    <h6><strong>User Survey</strong></h6>
+    <p>I created <a href="https://docs.google.com/forms/d/e/1FAIpQLScqTCC9JI84rKr1I2-HYmdwNhZiAuj2ujEkOWWIQ4-MQES-lw/viewform?usp=sf_link" style="padding-left: 0; padding-right: 0">an online questionnaire</a> and over 50 people answered it.</p>
 
-    <h4>User Research</h4>
-     <div class="container">
+<!--      <div class="container">
       <div class="row">
         <div class="col-md-3">
           <img class="img-fluid" src="image/split/31.png">
@@ -164,7 +157,19 @@
           <img class="img-fluid" src="image/split/34.png">
         </div>
       </div>
+    </div> -->
+    <h6><strong>Experiments</strong></h6>
+    <p>Continuing the scenario in the storyboard, I proposed a math problem for experimenting and tested users with different existing apps. I asked them to talk about their thoughts when they were testing, which helped me a lot to analyze their behavior and figure out potential improvements.</p>
+    <div class="container">
+      <img class="img-fluid" src="image/split/21.png">
     </div>
+
+    <div class="container">
+      <img class="img-fluid" src="image/split/23.png">
+    </div>
+    <hr>
+
+
 
      <h4>Highlights for Research Results</h4>
      <div class="container">
@@ -178,7 +183,7 @@
         </div>
       </div>
 
-      <h4>Take Away from User Research</h4>
+      <h4>Take Away </h4>
       <div class="container">
       <div class="row">
         <div class="col-md-6">
