--- a/index.html
+++ b/index.html
@@ -54,15 +54,26 @@
 
 <!-- self intro -->
 
-<div id="selfIntro" class="brightcolor" style="width: 100%">
+<div id="selfIntro" class="brightcolor" style="width: 100%; text-shadow: 2px 2px 3px #BDBDBD; background-color: #74b9ff; ">
 
+     
 
-      <div class="jumbotron" style="background-color : #74b9ff; color: white; margin: 0 auto; width: 68%; text-align: center">
-        <h1 class="display-3" style="font-size: 40px; padding-top: 20px; padding-bottom: 20px">Hello, I'm Sherry, a passionate designer</h1>
-        <p style="margin-top: 20px; font-size: 18px; text-align: center">to think from different perspectives | to design for users | to combine creativity and rationality <br><span style="visibility: hidden;">I learned to observe from different perspectives, to design for users and to combine creativity and rationality.I learned to observe from different perspectives, to design for users and to combine creativity and rationality</span></p>
+      <div class="jumbotron" style="background-color : #74b9ff; color: white; margin: 0 auto; text-align: center">
+
+        <div id="selfIntroLarge">
+
+          <h1 class="display-3" style="font-size: 40px; padding-top: 20px; padding-bottom: 20px">Hello, I'm Sherry, a passionate designer</h1>
+          <p style="margin-top: 20px; margin-bottom: 150px; font-size: 18px; text-align: center">| to think from different perspectives | to design for users | to combine creativity and rationality <br>
+
+        </div>
+
+        <div id="selfIntroSmall" style="background-color: #74b9ff;">
+
+          <h1 class="display-3" style="font-size: 26px; padding-top: 20px; padding-bottom: 20px">Hello, I'm Sherry, <br>a passionate designer</h1>
+          <p style="margin-top: 20px; margin-bottom: 150px; font-size: 14px; text-align: center">| to think from different perspectives <br>| to design for users <br>| to combine creativity and rationality <br>
+        </div>
+
       </div>
-
-
 
 
 </div>
@@ -70,23 +81,10 @@
 
 
 
-<div class="brightcolor" style="visibility: hidden;">
-  <div class="row">
-    <div class="col-sm-2">
-    </div>
+<div class="brightcolor" style="visibility: hidden; height: 280px; background-color: #74b9ff;" >
 
-    <div class="col-sm-8">
-      <div class="jumbotron" style="background-color : #74b9ff; color: white">
-        <h1 class="display-3" style="font-size: 40px; text-align: center;">Hello, I'm Sherry, a multidiciplinary designer</h1>
-        <p style="text-align: center;">For me, there is more than one way to become a creative designer. I have been learning architecture, drawing and painting. I have been working as an interior designer and website designer. I have also been learning UI/UX design and coding. All of these teach me to observe from different perspectives, to design for users and to combine inspiration and conscientiousness.</p>
-      </div>
-    </div>
-
-    <div class="col-sm-2">
-    </div>
-
-  </div>
 </div>
+
 
 
 <!-- project card -->
